--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -65,6 +65,6 @@ input[type=text].valid, input[type=email].valid, input[type=password].valid {
   filter: blur(3px);
 }
 
-input {
+input[type='text'], input[type='pssword'], input[type='email'] {
 	font-size: 16px;
 }
